// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugins/Pluggable should match snapshot with no overridden component 1`] = `
<Pluggable
  components={Object {}}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "textComponent": "span",
    }
  }
  theme={Object {}}
>
  <ProfilePopover
    hasMention={false}
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": Object {},
        "now": [Function],
        "textComponent": "span",
      }
    }
    isRHS={false}
    src="src"
    theme={Object {}}
    user={
      Object {
        "name": "name",
      }
    }
  >
    <Popover
      bsClass="popover"
      id="user-profile-popover"
      intl={
        Object {
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en",
          "messages": Object {},
          "now": [Function],
          "textComponent": "span",
        }
      }
      placement="right"
      theme={Object {}}
      title="@undefined"
    >
      <div
        className="popover right"
        id="user-profile-popover"
        intl={
          Object {
            "defaultFormats": Object {},
            "defaultLocale": "en",
            "formatDate": [Function],
            "formatHTMLMessage": [Function],
            "formatMessage": [Function],
            "formatNumber": [Function],
            "formatPlural": [Function],
            "formatRelative": [Function],
            "formatTime": [Function],
            "formats": Object {},
            "formatters": Object {
              "getDateTimeFormat": [Function],
              "getMessageFormat": [Function],
              "getNumberFormat": [Function],
              "getPluralFormat": [Function],
              "getRelativeFormat": [Function],
            },
            "locale": "en",
            "messages": Object {},
            "now": [Function],
            "textComponent": "span",
          }
        }
        role="tooltip"
        style={
          Object {
            "display": "block",
            "left": undefined,
            "top": undefined,
          }
        }
        theme={Object {}}
      >
        <div
          className="arrow"
          style={
            Object {
              "left": undefined,
              "top": undefined,
            }
          }
        />
        <h3
          className="popover-title"
        >
          @undefined
        </h3>
        <div
          className="popover-content"
        >
          <img
            className="user-popover__image"
            height="128"
            key="user-popover-image"
            src="src"
            width="128"
          />
          <div
            data-toggle="tooltip"
            key="user-popover-email"
          >
            <a
              className="text-nowrap text-lowercase user-popover__email"
              href="mailto:undefined"
            />
          </div>
          <div
            className="popover__row first"
            data-toggle="tooltip"
            key="user-popover-dm"
          >
            <a
              className="text-nowrap text-lowercase user-popover__email"
              href="#"
              onClick={[Function]}
            >
              <i
                className="fa fa-paper-plane"
              />
              <FormattedMessage
                defaultMessage="Send Message"
                id="user_profile.send.dm"
                values={Object {}}
              >
                <span>
                  Send Message
                </span>
              </FormattedMessage>
            </a>
          </div>
        </div>
      </div>
    </Popover>
  </ProfilePopover>
</Pluggable>
`;

exports[`plugins/Pluggable should match snapshot with overridden component 1`] = `
<Pluggable
  components={
    Object {
      "ProfilePopover": Object {
        "component": [Function],
      },
    }
  }
  theme={
    Object {
      "id": "theme_id",
    }
  }
>
  <ProfilePopoverPlugin
    hasMention={false}
    isRHS={false}
    src="src"
    theme={
      Object {
        "id": "theme_id",
      }
    }
    user={
      Object {
        "name": "name",
      }
    }
  >
    <span
      id="pluginId"
    >
      ProfilePopoverPlugin
    </span>
  </ProfilePopoverPlugin>
</Pluggable>
`;

exports[`plugins/Pluggable should match snapshot with overridden component with pluggableName 1`] = `
<Pluggable
  components={
    Object {
      "ProfilePopover": Object {
        "component": [Function],
      },
    }
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "textComponent": "span",
    }
  }
  pluggableName="ProfilePopover"
  theme={
    Object {
      "id": "theme_id",
    }
  }
>
  <ProfilePopoverPlugin
    hasMention={false}
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": Object {},
        "now": [Function],
        "textComponent": "span",
      }
    }
    isRHS={false}
    src="src"
    theme={
      Object {
        "id": "theme_id",
      }
    }
    user={
      Object {
        "name": "name",
      }
    }
  >
    <span
      id="pluginId"
    >
      ProfilePopoverPlugin
    </span>
  </ProfilePopoverPlugin>
</Pluggable>
`;
